Bump to Spring Boot 3.1.2